--- a/1145.html
+++ b/1145.html
@@ -574,7 +574,7 @@ document.body.addEventListener('input', POWERMODE);
   <div class="breadcrumb" style="margin-top: -5px;"><svg xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home" style="width: 10px;   width: 14px;height: 14px;vertical-align: -2px;
 "><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg><a href="/" style="padding-left: 5px;color: #7d8c8e;">首页</a>
 <span>/</span><a href="/b2/list-2.html" style="color: #7d8c8e;">继续教育</a><span>/</span>正文</div>
-<audio id="audioPlayer" controls preload style="max-width: 50%;opacity: .4;float: right;height: 24px;margin-top: -6px;" title="收听本文" src="https://dict.youdao.com/dictvoice?le=zh&audio=2025年秋季学期人教版义教新教材网络培训和答疑活动。学习入口以下为2025年秋季学期人教版义务教育阶段新教材网络培训的通知，请老师们按时参加培训。一培训方式采取网络视频方式。培训平台网址如下nbsptpepcomcnxjcq2025二注册报名参训学员需在7月9日至13日完成实名注册和培训报名已使用手机号注册过的学员，可直接登录报名。若忘记密码，请通过登录页的忘记密码重新设置密码。所有学员在注册和报名时请务必准确填写个人真实信息，未报名或报名信息有误将导致无法统计个人培训学时。三学时证书1学员需完成至少一个年级培训内容的学习后，方可获得学时证书。每完成一个年级相关培训内容的学习即可获得相应学时">
+<audio id="audioPlayer" controls preload style="max-width: 50%;opacity: .4;float: right;height: 24px;margin-top: -6px;" title="收听本文" src="https://dict.youdao.com/dictvoice?le=zh&audio=2025年秋季学期人教版义教新教材网络培训和答疑活动。学习入口以下为2025年秋季学期人教版义务教育阶段新教材网络培训的通知，请老师们按时参加培训。一培训方式采取网络视频方式。二注册报名参训学员需在7月9日至13日完成实名注册和培训报名已使用手机号注册过的学员，可直接登录报名。若忘记密码，请通过登录页的忘记密码重新设置密码。所有学员在注册和报名时请务必准确填写个人真实信息，未报名或报名信息有误将导致无法统计个人培训学时。三学时证书1学员需完成至少一个年级培训内容的学习后，方可获得学时证书。每完成一个年级相关培训内容的学习即可获得相应学时。2按规定注册，报名，并完成培训任务的学员可获得学时证书，">
   您的浏览器不支持 audio 元素。
 </audio>
 <span id="translate" style="border: 0px;cursor: pointer;float: right;color: #7d8c8e;font-size: 12px;margin-top: -5px;"></span>
@@ -582,7 +582,7 @@ document.body.addEventListener('input', POWERMODE);
     <script>
         const audioPlayer = document.getElementById('audioPlayer');
         const audioFiles = [
-            'https://dict.youdao.com/dictvoice?le=zh&audio=2025年秋季学期人教版义教新教材网络培训和答疑活动。学习入口以下为2025年秋季学期人教版义务教育阶段新教材网络培训的通知，请老师们按时参加培训。一培训方式采取网络视频方式。培训平台网址如下nbsptpepcomcnxjcq2025二注册报名参训学员需在7月9日至13日完成实名注册和培训报名已使用手机号注册过的学员，可直接登录报名。若忘记密码，请通过登录页的忘记密码重新设置密码。所有学员在注册和报名时请务必准确填写个人真实信息，未报名或报名信息有误将导致无法统计个人培训学时。三学时证书1学员需完成至少一个年级培训内容的学习后，方可获得学时证书。每完成一个年级相关培训内容的学习即可获得相应学时','https://dict.youdao.com/dictvoice?le=zh&audio=。2按规定注册，报名，并完成培训任务的学员可获得学时证书，本学科课程直播结束后第3天可登录本人账号查看，打印本人学时证书。学科直播时间小学英语PEP7月14日7月15日小学英语精通7月14日7月15日小学科学7月14日7月15日艺术唱游音乐小学7月14日7月15日艺术美术小学7月14日7月15日义教体育与健康7月14日7月15日义教信息科技7月14日7月15日小学语文7月16日一7月17日初中数学7月18日7月19日初中物理7月18日7月19日初中化学7月18日7月19日初中生物学7月18日7月19日初中英语7月18日7月19日小学数学7月20日7月21日初中语文7月22日7月23日初中历史7','https://dict.youdao.com/dictvoice?le=zh&audio=月22日7月23日初中地理7月24日7月25日艺术音乐初中7月24日7月25日艺术美术初中7月24日7月25日初中日语7月24日7月25日初中俄语7月24日7月25日艺术影视含数字媒体艺术戏剧含戏曲舞蹈7月24日7月25日小学道德与法治7月24日7月25日初中道德与法治7月24日7月25日习近平新时代中国特色社会主义思想学生读本小学7月26日',        ];
+            'https://dict.youdao.com/dictvoice?le=zh&audio=2025年秋季学期人教版义教新教材网络培训和答疑活动。学习入口以下为2025年秋季学期人教版义务教育阶段新教材网络培训的通知，请老师们按时参加培训。一培训方式采取网络视频方式。二注册报名参训学员需在7月9日至13日完成实名注册和培训报名已使用手机号注册过的学员，可直接登录报名。若忘记密码，请通过登录页的忘记密码重新设置密码。所有学员在注册和报名时请务必准确填写个人真实信息，未报名或报名信息有误将导致无法统计个人培训学时。三学时证书1学员需完成至少一个年级培训内容的学习后，方可获得学时证书。每完成一个年级相关培训内容的学习即可获得相应学时。2按规定注册，报名，并完成培训任务的学员可获得学时证书，','https://dict.youdao.com/dictvoice?le=zh&audio=本学科课程直播结束后第3天可登录本人账号查看，打印本人学时证书。四补学事宜。已完成报名，因特殊情况未能及时完成培训任务的学员，可于每学科课程直播结束后3天至9月15日，在原网址 tpep com cnxjcq2025 进行补学。补学达到规定学时，次日可登录本人账号查看和打印本人学时证书。学科直播时间小学英语PEP7月14日7月15日小学英语精通7月14日7月15日小学科学7月14日7月15日艺术唱游音乐小学7月14日7月15日艺术美术小学7月14日7月15日义教体育与健康7月14日7月15日义教信息科技7月14日7月15日小学语文7月16日一7月17日初中数学7月18日7月19日初中物理7月1','https://dict.youdao.com/dictvoice?le=zh&audio=8日7月19日初中化学7月18日7月19日初中生物学7月18日7月19日初中英语7月18日7月19日小学数学7月20日7月21日初中语文7月22日7月23日初中历史7月22日7月23日初中地理7月24日7月25日艺术音乐初中7月24日7月25日艺术美术初中7月24日7月25日初中日语7月24日7月25日初中俄语7月24日7月25日艺术影视含数字媒体艺术戏剧含戏曲舞蹈7月24日7月25日小学道德与法治7月24日7月25日初中道德与法治7月24日7月25日习近平新时代中国特色社会主义思想学生读本小学7月26日',        ];
         let currentTrack = 0;
 
         // 点击播放按钮时开始播放
@@ -628,22 +628,20 @@ document.body.addEventListener('input', POWERMODE);
 
 <p>以下为2025年（秋季学期）人教版义务教育阶段新教材网络培训的<a href="https://mp.weixin.qq.com/s?__biz=MzA4MTQ3MjczMA==&mid=2655477884&amp;idx=1&amp;sn=adfb8282bfcde481c1ba962f50e62e05&amp;chksm=85849408c643cd7dc58f308500a32ad4edd604b6186ebae7ad590470b24358ad1f0588431dfe&amp;mpshare=1&amp;scene=23&amp;srcid=0701KouWgn4W1ymjeJFixjsr&amp;sharer_shareinfo=045b8d8865268cadd20b94583eb79283&amp;sharer_shareinfo_first=e97b0b57ed840abfd115c947fdf731d6#rd" target="_blank" style="">通知</a>，请老师们按时参加培训。</p>
 
-<p>（一）培训方式采取网络视频方式。培训平台网址如下：&nbsp;<a href="https://t.pep.com.cn/xjcq2025" target="_blank" style="">t.pep.com.cn/xjcq2025</a></p>
+<p>（一）培训方式采取网络视频方式。</p>
 
 <p>（二）注册报名参训学员需在7月9日至13日完成实名注册和培训报名；已使用手机号注册过的学员，可直接登录报名。若忘记密码，请通过登录页的“忘记密码”重新设置密码。所有学员在注册和报名时请务必准确填写个人真实信息，未报名或报名信息有误将导致无法统计个人培训学时。</p>
 
 <p>（三）学时证书</p>
 <p>1.学员需完成至少一个年级培训内容的学习后，方可获得学时证书。每完成一个年级相关培训内容的学习即可获得相应学时。</p>
-<p>2.按规定注册、报名，并完成培训任务的学员可获得学时证书，本学科课程直播结束后<b><font size="3" color="#ff0000">第3天</font></b>可登录本人账号查看、打印本人学时证书。</p>
+<p>2.按规定注册、报名，并完成培训任务的学员可获得学时证书，本学科课程直播结束后<b><font size="3" color="#ff0000">第3天</font></b>可登录本人账号查看、打印本人学时证书。</p><p>（四）补学事宜。已完成报名，因特殊情况未能及时完成培训任务的学员，可于每学科课程直播结束后3天至9月15日，在原网址( t.pep. com. cn/xjcq2025 )进行补学。补学达到规定学时，次日可登录本人账号查看和打印本人学时证书。</p>
 
-<center><table border="1" style="text-align: center;font-size: 17px;line-height: 1em;" cellspacing="0" cellpadding="10"><tbody><tr style="
-    font-weight: 600;
-"><td>学科</td><td>直播时间</td></tr><tr><td>小学英语(PEP)</td><td>7月14日—7月15日</td></tr><tr><td>小学英语(精通)</td><td>7月14日—7月15日</td></tr><tr><td>小学科学</td><td>7月14日—7月15日</td></tr><tr><td>艺术·唱游·音乐(小学)</td><td>7月14日—7月15日</td></tr><tr><td>艺术·美术(小学)</td><td>7月14日—7月15日</td></tr><tr><td>义教体育与健康</td><td>7月14日—7月15日</td></tr><tr><td>义教信息科技</td><td>7月14日-7月15日</td></tr><tr><td>小学语文</td><td>7月16日一7月17日</td></tr><tr><td>初中数学</td><td>7月18日—7月19日</td></tr><tr><td>初中物理</td><td>7月18日—7月19日</td></tr><tr><td>初中化学</td><td>7月18日—7月19日</td></tr><tr><td>初中生物学</td><td>7月18日—7月19日</td></tr><tr><td>初中英语</td><td>7月18日—7月19日</td></tr><tr><td>小学数学</td><td>7月20日—7月21日</td></tr><tr><td>初中语文</td><td>7月22日-7月23日</td></tr><tr><td>初中历史</td><td>7月22日—7月23日</td></tr><tr><td>初中地理</td><td>7月24日—7月25日</td></tr><tr><td>艺术·音乐(初中)</td><td>7月24日—7月25日</td></tr><tr><td>艺术·美术(初中)</td><td>7月24日—7月25日</td></tr><tr><td>初中日语</td><td>7月24日—7月25日</td></tr><tr><td>初中俄语</td><td>7月24日—7月25日</td></tr><tr><td>艺术·影视(含数字媒体艺术)/戏剧(含戏曲)/舞蹈</td><td>7月24日—7月25日</td></tr><tr><td>小学道德与法治</td><td>7月24日—7月25日</td></tr><tr><td>初中道德与法治</td><td>7月24日—7月25日</td></tr><tr><td>习近平新时代中国特色社会主义思想学生读本(小学)</td><td>7月26日</td></tr></tbody></table></center></div>
+<center><table border="1" style="text-align: center;font-size: 17px;line-height: 1.5em;" cellspacing="0" cellpadding="15"><tbody><tr style="font-weight: 600;"><td>学科</td><td>直播时间</td></tr><tr><td>小学英语(PEP)</td><td>7月14日—7月15日</td></tr><tr><td>小学英语(精通)</td><td>7月14日—7月15日</td></tr><tr><td>小学科学</td><td>7月14日—7月15日</td></tr><tr><td>艺术·唱游·音乐(小学)</td><td>7月14日—7月15日</td></tr><tr><td>艺术·美术(小学)</td><td>7月14日—7月15日</td></tr><tr><td>义教体育与健康</td><td>7月14日—7月15日</td></tr><tr><td>义教信息科技</td><td>7月14日-7月15日</td></tr><tr><td>小学语文</td><td>7月16日一7月17日</td></tr><tr><td>初中数学</td><td>7月18日—7月19日</td></tr><tr><td>初中物理</td><td>7月18日—7月19日</td></tr><tr><td>初中化学</td><td>7月18日—7月19日</td></tr><tr><td>初中生物学</td><td>7月18日—7月19日</td></tr><tr><td>初中英语</td><td>7月18日—7月19日</td></tr><tr><td>小学数学</td><td>7月20日—7月21日</td></tr><tr><td>初中语文</td><td>7月22日-7月23日</td></tr><tr><td>初中历史</td><td>7月22日—7月23日</td></tr><tr><td>初中地理</td><td>7月24日—7月25日</td></tr><tr><td>艺术·音乐(初中)</td><td>7月24日—7月25日</td></tr><tr><td>艺术·美术(初中)</td><td>7月24日—7月25日</td></tr><tr><td>初中日语</td><td>7月24日—7月25日</td></tr><tr><td>初中俄语</td><td>7月24日—7月25日</td></tr><tr><td>艺术·影视(含数字媒体艺术)/戏剧(含戏曲)/舞蹈</td><td>7月24日—7月25日</td></tr><tr><td>小学道德与法治</td><td>7月24日—7月25日</td></tr><tr><td>初中道德与法治</td><td>7月24日—7月25日</td></tr><tr><td>习近平新时代中国特色社会主义思想学生读本(小学)</td><td>7月26日</td></tr></tbody></table></center></div>
 <div class="readall_box">
           <div class="read_more_mask"></div>
           <a class="read_more_btn" target="_self">阅读全文 <i class="fa fa-angle-down" aria-hidden="true" style="font-size: 18px; color: #ca0c16;vertical-align:middle;"></i></a>
       </div>
-<p class="time clb">继续教育 2025-07-10 15:39:20 通过 手机 <i class="iconfont icon-view"></i> 浏览(104) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
+<p class="time clb">继续教育 2025-07-10 15:39:20 通过 手机 <i class="iconfont icon-view"></i> 浏览(379) <span> <a href="javascript:printme()" target="_self" style="color: #999;"><i class="fa fa-print"></i> 打印</a></span></p>
 <p class="navPost">  
 	<a href="JavaScript:history.back();">返回</a>&nbsp; <a href="JavaScript:DotRoll('#formpl')">我要评论</a></p></div></div>  
 <!-- 上一篇 下一篇开始 -->
